tests/ui/feature-gates/feature-gate-thiscall.stderr
error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:12:8
   |
LL | extern "thiscall-unwind" fn fu() {}
   |        ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:13:8
   |
LL | extern "thiscall" fn f() {}
   |        ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:16:12
   |
LL |     extern "thiscall" fn m();
   |            ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:17:12
   |
LL |     extern "thiscall-unwind" fn mu();
   |            ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:19:12
   |
LL |     extern "thiscall" fn dm() {}
   |            ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:20:12
   |
LL |     extern "thiscall-unwind" fn dmu() {}
   |            ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:25:12
   |
LL |     extern "thiscall" fn m() {}
   |            ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:26:12
   |
LL |     extern "thiscall-unwind" fn mu() {}
   |            ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:30:12
   |
LL |     extern "thiscall" fn im() {}
   |            ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:31:12
   |
LL |     extern "thiscall-unwind" fn imu() {}
   |            ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:34:18
   |
LL | type TA = extern "thiscall" fn();
   |                  ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:35:19
   |
LL | type TAU = extern "thiscall-unwind" fn();
   |                   ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:37:8
   |
LL | extern "thiscall" {}
   |        ^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error[E0658]: thiscall-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-thiscall.rs:38:8
   |
LL | extern "thiscall-unwind" {}
   |        ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(abi_thiscall)]` to the crate attributes to enable

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0658`.
